[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/hockey_sticks5.png" type="Texture" id=1]
[ext_resource path="res://Scenes/InitialButtons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/EnergyRecover.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Coins.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/BestScore.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/plus4.png" type="Texture" id=6]
[ext_resource path="res://Scripts/InitialScreen.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Chances.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/MusicGame.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/GeneralButtons.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.34902, 0.741176, 0.847059, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.282353, 0.294118, 0.968627, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="InitialScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -112.0
margin_right = 112.0
margin_bottom = 112.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" parent="." instance=ExtResource( 5 )]
margin_left = -44.0
margin_top = 141.0
margin_right = -4.0
margin_bottom = 181.0

[node name="Coins" parent="." instance=ExtResource( 4 )]
margin_left = 11.0
margin_top = 15.0
margin_right = 51.0
margin_bottom = 55.0

[node name="HBoxContainerPlus" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 258.0
margin_top = 13.0
margin_right = -55.0
margin_bottom = -695.0
rect_scale = Vector2( 0.3, 0.3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnMore" type="Button" parent="HBoxContainerPlus"]
margin_right = 87.0
margin_bottom = 82.0
icon = ExtResource( 6 )
flat = true

[node name="HBoxContainerPlus2" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 59.0
margin_right = -133.0
margin_bottom = -649.0
rect_scale = Vector2( 0.3, 0.3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnMore2" type="Button" parent="HBoxContainerPlus2"]
margin_right = 87.0
margin_bottom = 82.0
icon = ExtResource( 6 )
flat = true

[node name="EnergyRecover" parent="." instance=ExtResource( 3 )]
margin_left = 282.0
margin_top = 26.0
margin_right = 322.0
margin_bottom = 66.0

[node name="InitialButtons" parent="." instance=ExtResource( 2 )]
margin_left = -196.0
margin_top = -494.0
margin_right = -156.0
margin_bottom = -454.0

[node name="Chances" parent="." instance=ExtResource( 8 )]
position = Vector2( 11, 64 )

[node name="MusicGame" parent="." instance=ExtResource( 9 )]

[node name="GeneralButtons" parent="." instance=ExtResource( 10 )]

[connection signal="pressed" from="HBoxContainerPlus/btnMore" to="." method="_on_btnMore_pressed"]
[connection signal="pressed" from="HBoxContainerPlus2/btnMore2" to="." method="_on_btnMore2_pressed"]
